--- a/kitty.conf
+++ b/kitty.conf
@@ -8,7 +8,7 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      League Mono
+font_family      FiraMono Nerd Font
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
