--- a/kitty.conf
+++ b/kitty.conf
@@ -8,10 +8,15 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      FiraMono Nerd Font
+font_family      CommitMono
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
+
+disable_ligatures cursor
+
+# Nerd Fonts v2.3.3
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AA,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0 Symbols Nerd Font
 
 # Font size (in pts)
 font_size        16.0
@@ -98,7 +103,7 @@ visual_bell_duration 0.0
 enable_audio_bell no
 
 # The modifier keys to press when clicking with the mouse on URLs to open the URL
-open_url_modifiers ctrl+shift
+# open_url_modifiers ctrl+shift
 
 # The program with which to open URLs that are clicked on. The special value "default" means to
 # use the operating system's default URL handler.
