--- a/kitty.conf
+++ b/kitty.conf
@@ -8,7 +8,7 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      FiraCode Nerd Font
+font_family      FiraCode Nerd Font Mono
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
@@ -250,4 +250,4 @@ macos_titlebar_color background
 allow_remote_control yes
 include ./theme.conf
 
-shell /bin/fish
+shell fish
