--- a/kitty.conf
+++ b/kitty.conf
@@ -222,6 +222,9 @@ map ctrl+shift+up      increase_font_size
 map ctrl+shift+down    decrease_font_size
 map ctrl+shift+backspace restore_font_size
 
+# Sessionizer
+map super+t send_text normal,application ~/.config/tmuxinator/scripts/tmux-sessionizer  \r
+
 # Symbol mapping (special font for specified unicode code points). Map the
 # specified unicode codepoints to a particular font. Useful if you need special
 # rendering for some symbols, such as for Powerline. Avoids the need for
