--- a/kitty.conf
+++ b/kitty.conf
@@ -171,6 +171,11 @@ color15  #d8d8d8
 # You can use the special action no_op to unmap a keyboard shortcut that is
 # assigned in the default configuration.
 
+action_alias launch_current send_text normal,application
+
+map super+t             launch_current ~/.config/tmuxinator/scripts/tmux-sessionizer\r
+map super+a             launch_current ~/.config/tmuxinator/scripts/tmux-attach\r
+
 # Clipboard
 map super+v             paste_from_clipboard
 map ctrl+shift+s        paste_from_selection
@@ -250,4 +255,4 @@ macos_titlebar_color background
 allow_remote_control yes
 include ./theme.conf
 
-shell /bin/fish
+shell fish
