--- a/kitty.conf
+++ b/kitty.conf
@@ -224,6 +224,7 @@ map ctrl+shift+backspace restore_font_size
 
 # Sessionizer
 map super+t send_text normal,application ~/.config/tmuxinator/scripts/tmux-sessionizer  \r
+map super+ctrl+t send_text normal,application ~/.config/tmuxinator/scripts/tmux-sessionizer 1 \r
 
 # Symbol mapping (special font for specified unicode code points). Map the
 # specified unicode codepoints to a particular font. Useful if you need special
