--- a/kitty.conf
+++ b/kitty.conf
@@ -223,8 +223,11 @@ map ctrl+shift+down    decrease_font_size
 map ctrl+shift+backspace restore_font_size
 
 # Sessionizer
-map super+t send_text normal,application ~/.config/tmuxinator/scripts/tmux-sessionizer  \r
-map super+ctrl+t send_text normal,application ~/.config/tmuxinator/scripts/tmux-sessionizer 1 \r
+action_alias launch_current send_text normal,application
+
+map super+a launch_current ~/.config/tmuxinator/scripts/tmux-attach\r
+map super+t launch_current ~/.config/tmuxinator/scripts/tmux-sessionizer\r
+map super+ctrl+t launch_current ~/.config/tmuxinator/scripts/tmux-sessionizer 1\r
 
 # Symbol mapping (special font for specified unicode code points). Map the
 # specified unicode codepoints to a particular font. Useful if you need special
